--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "^5.4.2"
   }
 }
