--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -22,6 +23,7 @@
     "eslint-config-next": "13.5.5",
     "lucide-react": "^0.287.0",
     "next": "13.5.5",
+    "next-auth": "^4.23.2",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
